Updates to confidence levels

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -384,16 +384,16 @@
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/qr">Authenticator app setup</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Journey not explored</td>
+                        <td class="govuk-table__cell">Tested well with the 2 users who chose the app instead of text messages</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/email">Sign in email</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                        <td class="govuk-table__cell">Tested well with all users in progressive rounds of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -463,7 +463,7 @@
                         <td class="govuk-table__cell"><a href="/v7/l2/users/view/all">Search for a user by email address</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Journey not explored</td>
+                        <td class="govuk-table__cell">Entirely disfavoured, 9 out of 10 users failed to use successfully</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -488,24 +488,38 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">User details</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><a href="/v7/l3/users/view/single">User details</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l3/users/view/single">Resend invite from dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Tested well with 8 users, all able to navigate from the dashboard and complete the task</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l3/users/view/single">Restore user access from dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Tested well with 8 users, all able to navigate from the dashboard and complete the task</td>
                     </tr>
 
                      <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">Delete user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Tests well and meets MVP requirements, further investigation may be required</td>
+                        <td class="govuk-table__cell">Tests well and meets MVP requirements, further investigation may be required around where deleted users are stored within the system</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l3/dashboard">Organisation admin dashboard</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Tested well and will work for MVP, possible redundant page, might be worth testing without this page in the future</td>
+                        <td class="govuk-table__cell">Tested well and works for MVP, one user identified it as a useful place for notifications</td>
                     </tr>
 
                     <tr class="govuk-table__row">
