--- a/app/views/index.html
+++ b/app/views/index.html
@@ -334,6 +334,17 @@
                 </li>
             </ul>
 
+
+            <h3 class="govuk-heading-s">Useful links</h3>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a href="/public/files/insights/Sprint-15-and-16-summary.ppt">UR Summary sprint 15 & 16</a></li>
+                <li><a href="/public/files/insights/Sprint-15-16-test-results-collated-L3-prototype-7.xlsx">Sprint 15 & 16 L3 Organisation admins collated test results</a></li>
+                <li><a href="/public/files/insights/Discovery-in-Alpha-3.4.20.ppt">UR Discovery observations</a></li>
+            </ul>
+
+
+
             <h3 class="govuk-heading-s">Confidence level</h3>
 
             <table class="govuk-table">
