Additional UR docs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -338,9 +338,10 @@
             <h3 class="govuk-heading-s">Useful links</h3>
 
             <ul class="govuk-list govuk-list--bullet">
-                <li><a href="/public/files/insights/Sprint-15-and-16-summary.ppt">UR Summary sprint 15 & 16</a></li>
-                <li><a href="/public/files/insights/Sprint-15-16-test-results-collated-L3-prototype-7.xlsx">Sprint 15 & 16 L3 Organisation admins collated test results</a></li>
-                <li><a href="/public/files/insights/Discovery-in-Alpha-3.4.20.ppt">UR Discovery observations</a></li>
+                <li><a href="/public/files/insights/Sprint-15-and-16-summary.ppt">UR summary sprint 15 & 16</a></li>
+                <li><a href="/public/files/insights/Sprint-15-16-test-results-collated-L3-prototype-7.xlsx">Sprint 15 & 16 L3 organisation admins collated test results</a></li>
+                <li><a href="/public/files/insights/Discovery-in-Alpha-3.4.20.ppt">UR discovery observations</a></li>
+                <li><a href="/public/files/discussion/DWP-Authenticate-admin-v7-sprint-15-and-16.docx">UR discussion guide</a></li>
             </ul>
 
 
