--- a/app/views/index.html
+++ b/app/views/index.html
@@ -332,6 +332,9 @@
                 <li>
                     Added revised <a href="/v7/l2-requester/orgs/add/start">add new organisation</a> journey for requests/authorisations 
                 </li>
+                <li>
+                    Amended 'Change user's status' heading to 'Manage user' on user details pages
+                </li>
             </ul>
 
 
