--- a/app/views/dev2/l3/users/view/single-jn.html
+++ b/app/views/dev2/l3/users/view/single-jn.html
@@ -95,7 +95,7 @@
                     name: "user-task",
                     fieldset: {
                         legend: {
-                            text: "Change user's status",
+                            text: "Manage user",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--m"
                         }
