--- a/app/views/v7/l2/users/view/single-jb.html
+++ b/app/views/v7/l2/users/view/single-jb.html
@@ -95,7 +95,7 @@
                     name: "user-task",
                     fieldset: {
                         legend: {
-                            text: "Change user's status",
+                            text: "Manage user",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--m"
                         }
